--- a/heartdiease/pubspec.yaml
+++ b/heartdiease/pubspec.yaml
@@ -37,8 +37,11 @@ dependencies:
   flutter_neumorphic: ^3.2.0
   flutter_cupertino_datetime_picker: ^3.0.0
   font_awesome_flutter: ^10.1.0
+  dropdown_button2: ^1.2.1
+
   
   dio: ^4.0.6
+  firebase_auth: ^3.6.3
 
 dev_dependencies:
   flutter_test:
