--- a/heartdiease/pubspec.yaml
+++ b/heartdiease/pubspec.yaml
@@ -38,10 +38,14 @@ dependencies:
   flutter_cupertino_datetime_picker: ^3.0.0
   font_awesome_flutter: ^10.1.0
   dropdown_button2: ^1.2.1
-
-  
+  url_launcher: ^6.0.17
+  flutter_form_builder: ^7.5.0
+  validators: ^3.0.0
   dio: ^4.0.6
-  firebase_auth: ^3.6.3
+  dropdown_formfield: ^0.1.4
+  bezier: ^1.2.0
+  google_fonts: ^3.0.1
+ 
 
 dev_dependencies:
   flutter_test:
